<resources>
    <string name="app_name">Examen</string>
    <string name="btnEntrar">Login</string>
    <string name="txtNombre">Ingrese Nombre</string>
    <string name="btnEquipo">Equipo</string>
    <string name="btnCrearEquipo">Crear Equipo</string>
    <string name="txtNombreEqueip">Nombre</string>
    <string name="txtNombreLiga">Liga</string>
    <string name="txtNombreFechaCreacio">Fecha Creacion</string>
    <string name="txtNumeroCopas">Copas Int</string>
    <string name="chkCampeonActual">Campeon Actual</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="btnActualizar">Actualizar</string>
    <string name="btnCrearJug">Crear Jugador</string>
    <string name="btnGestionarJug">Gestionar Jugador</string>
    <string name="btnMenu">Menu</string>
    <string name="txtNumeroCamiseta">Numero Camiseta</string>
    <string name="txtNombreCamiseta">Nombre Camiseta</string>

    <string name="txtNombreJugador">Nombre Jugador</string>
    <string name="txtPoderEspecial">Poder Especial</string>
    <string name="txtFenchaIngreso">Fecha Ingreso</string>
    <string name="txtGoles">Goles</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnEliminarJugador">Eliminar Jugador</string>
    <string name="btnActualizarJugador">Actualizar Jugador</string>
    <string name="msg">Ingreso exitoso</string>
    <string name="msgEliminar">Eliminado exitosamente</string>
    <string name="msgActualizar">Actualizado exitosamente</string>
    <string name="nombreEquipo">Nombres de Equipos</string>
    <string name="nombreJugador">Nombres de Jugadores</string>

</resources>
