<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.jorge.examen.IngresarJugadorActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNombreCamiseta"
            app:layout_constraintStart_toStartOf="@+id/txtnumeroCamiseta"
            app:layout_constraintEnd_toEndOf="@+id/txtnumeroCamiseta"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtnumeroCamiseta"
            android:hint="@string/txtNombreCamiseta"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNombreJugador"
            app:layout_constraintStart_toStartOf="@+id/txtNombreCamiseta" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtNombreCamiseta"
            app:layout_constraintEnd_toEndOf="@+id/txtNombreCamiseta" android:hint="@string/txtNombreJugador"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtpoderEspecialDos" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtNombreJugador"
            app:layout_constraintStart_toStartOf="@+id/txtNombreJugador"
            app:layout_constraintEnd_toEndOf="@+id/txtNombreJugador" android:hint="@string/txtPoderEspecial"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtGoles"
            android:hint="@string/txtGoles"
            app:layout_constraintStart_toStartOf="@+id/txtfechaIngresoEquipo" android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="@+id/txtfechaIngresoEquipo"
            app:layout_constraintEnd_toEndOf="@+id/txtfechaIngresoEquipo"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtnumeroCamiseta" android:layout_marginTop="124dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/txtNumeroCamiseta"/>
    <Button
            android:text="@string/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnGuardar" app:layout_constraintStart_toStartOf="@+id/txtGoles"
            app:layout_constraintEnd_toEndOf="@+id/txtGoles" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/txtGoles" app:layout_constraintHorizontal_bias="0.408"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txtfechaIngresoEquipo" android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="@+id/txtpoderEspecialDos"
            app:layout_constraintEnd_toEndOf="@+id/txtpoderEspecialDos" android:hint="@string/txtFenchaIngreso"/>
</android.support.constraint.ConstraintLayout>