<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.jorge.examen.ActualizarActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtLiga" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/txtNombre"
            app:layout_constraintStart_toStartOf="@+id/txtNombre" app:layout_constraintEnd_toEndOf="@+id/txtNombre"
            app:layout_constraintHorizontal_bias="0.0" android:hint="@string/txtNombreLiga"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNombre" android:layout_marginTop="52dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/txtNombreEqueip"
            app:layout_constraintHorizontal_bias="0.609"/>
    <Button
            android:text="@string/btnEliminar"
            android:layout_width="155dp"
            android:layout_height="47dp"
            android:id="@+id/btnEliminar"
            app:layout_constraintStart_toStartOf="@+id/rdActualizarCam"
            android:layout_marginTop="72dp"
            app:layout_constraintTop_toTopOf="@+id/rdActualizarCam"
            app:layout_constraintEnd_toEndOf="@+id/rdActualizarCam" app:layout_constraintHorizontal_bias="0.469"/>
    <Button
            android:text="@string/btnActualizar"
            android:layout_width="156dp"
            android:layout_height="47dp"
            android:id="@+id/btnActualizar" app:layout_constraintStart_toStartOf="@+id/btnEliminar"
            app:layout_constraintEnd_toEndOf="@+id/btnEliminar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnEliminar"/>
    <Button
            android:text="@string/btnCrearJug"
            android:layout_width="153dp"
            android:layout_height="43dp"
            android:id="@+id/btnCrearJugador" app:layout_constraintStart_toStartOf="@+id/btnActualizar"
            app:layout_constraintEnd_toEndOf="@+id/btnActualizar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnActualizar"/>
    <Button
            android:text="@string/btnGestionarJug"
            android:layout_width="153dp"
            android:layout_height="52dp"
            android:id="@+id/btnGestionarJugador" app:layout_constraintStart_toStartOf="@+id/btnCrearJugador"
            app:layout_constraintEnd_toEndOf="@+id/btnCrearJugador" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCrearJugador"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtNumCopInter"
            app:layout_constraintStart_toStartOf="@+id/txtFechaCreacion"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toTopOf="@+id/txtFechaCreacion"
            app:layout_constraintEnd_toEndOf="@+id/txtFechaCreacion" android:hint="@string/txtNumeroCopas"/>
    <Button
            android:text="@string/btnMenu"
            android:layout_width="156dp"
            android:layout_height="45dp"
            android:id="@+id/btnMenuRetorno" app:layout_constraintStart_toStartOf="@+id/btnGestionarJugador"
            app:layout_constraintEnd_toEndOf="@+id/btnGestionarJugador"
            app:layout_constraintTop_toBottomOf="@+id/btnGestionarJugador"/>
    <CheckBox
            android:text="@string/chkCampeonActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdActualizarCam" app:layout_constraintStart_toStartOf="@+id/txtNumCopInter"
            android:layout_marginTop="72dp"
            app:layout_constraintTop_toTopOf="@+id/txtNumCopInter"
            app:layout_constraintEnd_toEndOf="@+id/txtNumCopInter" app:layout_constraintHorizontal_bias="0.076"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txtFechaCreacion"
            app:layout_constraintStart_toStartOf="@+id/txtLiga"
            app:layout_constraintTop_toBottomOf="@+id/txtNombre" android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="@+id/txtLiga" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/txtNombreFechaCreacio"/>
    <TextView
            android:text="@string/txtNombreEqueip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/txtNombre" app:layout_constraintEnd_toStartOf="@+id/txtNombre"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/txtNombreLiga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtNombre" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/txtLiga"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/txtNombreFechaCreacio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/txtFechaCreacion"
            app:layout_constraintEnd_toStartOf="@+id/txtFechaCreacion" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/txtNumeroCopas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/txtNumCopInter" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/txtNumCopInter"
            android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>